@@ -15,6 +15,10 @@ Tommy McCabe			rocketjet314@yahoo.com
 
 ---------------------------------------------------------------------------
 
+Wed Jun 09 08:54:11 CST 2004	Claudio Matsuoka <claudio@conectiva.com>
+
+	* Trivial patch to build stuff in elkscmd/inet.
+
 Wed Jun 09 08:21:32 CST 2004	Miguel Bolanos <mike@linuxlabs.com>
 
 	* Included swapon back into cvs :)
